# harm-stack

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
app/: Cargo.toml  tailwind.config.js
app/src/: main.rs  tailwind.css
server/: Cargo.toml
server/src/: lib.rs
