
[workspace]
resolver = "3"
package.version = "0.0.1"
members = [
  "app", "server",
]

[workspace.lints.clippy]
pedantic = { level="deny", priority=-1}
missing_const_for_fn = "deny"
unwrap_user = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"

print_stdout = "warn"
todo = "warn"


[workspace.dependencies]
axum = "0.8.4"
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["fs"] }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

server = { path = "./server" }
