[package]
name = "app"
edition = "2024"
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "harm" # TODO change this to the name of the web application
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

server = { workspace = true }
